# command-server

./: BUILD  README.md  WORKSPACE  example.yaml  go.mod
cmd/command-server/: BUILD.bazel  main.go
pkg/config/: BUILD.bazel  config.go
pkg/server/: BUILD.bazel  command.go  command_test.go  writer.go
